<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_visible">

    <GridLayout
        android:id="@+id/stat_list_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity=""
        android:background="@drawable/half_rounded_layout_shape"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="20dp"
        android:rotation="180">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg5"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg12"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/avg25"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg50"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg100"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

    </GridLayout>

    <GridLayout
        android:id="@+id/stat_list_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/half_rounded_layout_shape"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg5"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg12"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/avg25"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg50"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:text="@string/avg100"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"/>

    </GridLayout>

</FrameLayout>