<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:rotation="180">

            <TextView
                android:id="@+id/textView_score_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="@string/score"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView_scramble_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17sp"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_time_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start_time"
                android:paddingBottom="40dp"
                android:textSize="50sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_score_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="@string/score"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView_scramble_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17sp"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_time_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start_time"
                android:paddingBottom="40dp"
                android:textSize="50sp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.maximxd.racetimer.TimeButton
            android:id="@+id/btn_time_1"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@color/invisible"/>

        <com.maximxd.racetimer.TimeButton
            android:id="@+id/btn_time_2"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="@color/invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/colorOnSecondary"/>

    <Button
        android:id="@+id/btn_puzzles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puzzles"
        android:textSize="22sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rounded_btn_shape"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/btn_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/penalty"
        android:textSize="22sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rounded_btn_shape"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/stats_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_rounded_layout_shape"
        android:text="@string/stats"
        android:textSize="22sp"
        android:rotation="180"/>

    <Button
        android:id="@+id/stats_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_rounded_layout_shape"
        android:text="@string/stats"
        android:textSize="22sp"
        android:layout_gravity="bottom"/>

</FrameLayout>