<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/penalty_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_visible">

    <LinearLayout
        android:id="@+id/penalty_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:background="@drawable/rounded_layout_shape"
        android:orientation="horizontal"
        android:layout_gravity="top|center_horizontal"
        android:rotation="180">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="@drawable/rounded_btn_shape"
            android:text="@string/ok"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="@drawable/rounded_btn_shape"
            android:text="@string/plus2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="@drawable/rounded_btn_shape"
            android:text="@string/dnf"
            android:layout_marginStart="10dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/penalty_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:padding="20dp"
        android:background="@drawable/rounded_layout_shape"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="@drawable/rounded_btn_shape"
            android:text="@string/ok"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="@drawable/rounded_btn_shape"
            android:text="@string/plus2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:padding="15dp"
            android:background="@drawable/rounded_btn_shape"
            android:text="@string/dnf"
            android:layout_marginStart="10dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</FrameLayout>